merging modules